--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.flower.shopping"
+        applicationId "com.flowershop.shopping"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
